# Bottle-ORM

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
bottle/: Cargo.toml
bottle-orm/: Cargo.toml  README.md
bottle-orm-macro/: Cargo.toml  README.md
bottle-orm-macro/src/: derive_anyrow.rs  derive_enum.rs  derive_model.rs  lib.rs  types.rs
bottle-orm/src/: any_struct.rs  database.rs  lib.rs  migration.rs  model.rs  pagination.rs  query_builder.rs  transaction.rs  value_binding.rs
bottle-orm/tests/: alias_test.rs  array_json_test.rs  asterisk_test.rs  axum_test.rs  batch_insert_test.rs  complex_user_dto_test.rs  composite_pk_test.rs  eager_loading_test.rs  enum_test.rs  join_raw_test.rs  migration_diff_test.rs  pagination_left_join_test.rs  postgres_wildcard_expansion_test.rs  scalar_tuple_test.rs  scan_as_test.rs  soft_delete_test.rs  where_test.rs
bottle/src/: main.rs
bottle/src/database/: database.rs  mod.rs  user.rs
bottle/src/handlers/: auth.rs
bottle/src/server/: mod.rs  server.rs
dev/: Cargo.toml
dev/src/: main.rs
