[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

[dependencies]
bottle-orm = { path = "../bottle-orm" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "any",
    "postgres",
    "sqlite",
    "mysql",
    "chrono",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = "1.20.0"
